test/files/pos/extra-predef/minidef_1.scala
package hello

object minidef {
  type INT = scala.Int
}
