test/files/neg/yimports-custom-b/minidef_1.scala
//> using options -Yimports:scala

package hello.world

object minidef {
  type Numb = Int
  final val Magic = 42
}
